# esp_idf_framework_demo

camera/: .gitignore  README.md  partitions.csv  sdkconfig
camera/components/diagnostics/: CMakeLists.txt
camera/components/diagnostics/include/: diagnostics.h
camera/components/diagnostics/src/: diagnostics.c
camera/components/libcamera/: CMakeLists.txt  spi.c  spi.h
camera/components/libcamera/Arducam/: ArducamCamera.c  ArducamCamera.h
camera/components/spi_mutex/: CMakeLists.txt
camera/components/spi_mutex/include/: spi_mutex.h
camera/components/spi_mutex/src/: spi_mutex.c
camera/components/uart/: CMakeLists.txt  uart.c
camera/docs/: day1_display_tearing_report.md  day2_system_stability_report.md
camera/main/: CMakeLists.txt  app_main.c  font6x8.h  idf_component.yml  priorities.h
esp32_ili9488_simple/: CMakeLists.txt  sdkconfig
esp32_ili9488_simple/main/: CMakeLists.txt  esp32_ili9488_simple.c
hx711/: CMakeLists.txt
hx711/main/: CMakeLists.txt  hx711.c
my_lvgl_ili9488/: CMakeLists.txt  sdkconfig  sdkconfig.old
my_lvgl_ili9488/main/: CMakeLists.txt  idf_component.yml  main.c
smart_plate/: .gitignore  CMakeLists.txt  build_and_flash.sh  partitions.csv  sdkconfig
smart_plate/components/arducam/: ArducamCamera.c  ArducamCamera.h  ArducamLink.c  ArducamLink.h  CMakeLists.txt  component.mk  delay.h  uart.h
smart_plate/main/: CMakeLists.txt  idf_component.yml  smart_plate_main.c
